--- a/gb/21/6/8/n13007223.md
+++ b/gb/21/6/8/n13007223.md
@@ -1,15 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jcxdqq3957/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jcxdqq3957/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jcxdqq3957/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jcxdqq3957/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jcxdqq3957/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jcxdqq3957/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jcxdqq3957/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jcxdqq3957/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jcxdqq3957/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jcxdqq3957/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jcxdqq3957/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jcxdqq3957/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jcxdqq3957/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jcxdqq3957/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>终结中共真相车队首现新西兰首都 民众震撼</h2>
-
-<h6></h6>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>“终结中共”真相车队首现新西兰首都 民众震撼</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13009906-4-600x400.jpg" />
+<h6>整装待发的真相车队。（袁弘/大纪元）
+</h6>
 <hr>
-	<p>【大纪元2021年06月08日讯】（大纪元记者安琪新西兰编译报导）6月6日至8日，新西兰部分法轮功学员在包括首都惠灵顿在内的北岛南端的几个主要市镇中心举行了以“<ahref="https://github.com/jcxdqq3957/djy/blob/master/gb/tag/%E7%BB%88%E7%BB%93%E4%B8%AD%E5%85%B1.md#1">终结中共</a>”(End CCP)为主题的真相汽车游行，为这些地区的民众了解中共的邪恶，从而远离中共提供了更多的机会。</p>
-<p>刚刚过去的女王生日长周末是新西兰冬日里一个难得的假期，当人们都在与家人和朋友一起购物、度假、享受生活时，在北岛南部的旺格努伊(Whanganui)、北帕(Palmerston North)、莱文(Levin)、Paraparaumu、Porirua和惠灵顿等地的市中心出现了一支别开生面的<ahref="https://github.com/jcxdqq3957/djy/blob/master/gb/tag/%E8%BD%A6%E9%98%9F.md#1">车队</a>。</p>
-<p>该<ahref="https://github.com/jcxdqq3957/djy/blob/master/gb/tag/%E8%BD%A6%E9%98%9F.md#1">车队</a>由20多部车辆组成，每台车的车顶都安放着中英文‘<ahref="https://github.com/jcxdqq3957/djy/blob/master/gb/tag/%E7%BB%88%E7%BB%93%E4%B8%AD%E5%85%B1.md#1">终结中共</a>’(End CCP)、“<ahref="https://github.com/jcxdqq3957/djy/blob/master/gb/tag/%E9%93%B2%E9%99%A4%E4%B8%AD%E5%85%B1.md#1">铲除中共</a>”、“消灭中共恶魔”、“Covid 19=中共病毒”、“中共撒谎，人民死亡”、“保护新西兰不受疫情影响，拒绝中共”等标语牌。</p>
+	<p>【大纪元2021年06月08日讯】（大纪元记者安琪新西兰报导）6月6日至8日，新西兰部分法轮功学员在包括首都惠灵顿在内的北岛南端的几个主要市镇中心举行了以“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BB%88%E7%BB%93%E4%B8%AD%E5%85%B1.md#1">终结中共</a>”(End CCP)为主题的真相汽车游行，为这些地区的民众了解中共的邪恶，从而远离中共提供了更多的机会。</p>
+<p>刚刚过去的女王生日长周末是新西兰冬日里一个难得的假期，当人们都在与家人和朋友一起购物、度假、享受生活时，在北岛南部的旺格努伊(Whanganui)、北帕(Palmerston North)、莱文(Levin)、Paraparaumu、Porirua和惠灵顿等地的市中心出现了一支别开生面的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BD%A6%E9%98%9F.md#1">车队</a>。</p>
+<p>该<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BD%A6%E9%98%9F.md#1">车队</a>由20多部车辆组成，每台车的车顶都安放着中英文‘<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BB%88%E7%BB%93%E4%B8%AD%E5%85%B1.md#1">终结中共</a>’(End CCP)、“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%93%B2%E9%99%A4%E4%B8%AD%E5%85%B1.md#1">铲除中共</a>”、“消灭中共恶魔”、“Covid 19=中共病毒”、“中共撒谎，人民死亡”、“保护新西兰不受疫情影响，拒绝中共”等标语牌。</p>
 <p>20多辆汽车鱼贯而行，组成了一支蔚为壮观的真相车队，在各个市中心缓缓驶过。很多路人感到震撼，人们盯着车顶的标语牌阅读。还有人随着眼前驶过的车辆，把每块标语的内容都读了出来。更多的人是向车队微笑、挥手、竖起大拇指或举着拳头为车队加油，车里的司机则是鸣笛致敬。</p>
+<figure id="attachment_13015451" aria-describedby="caption-attachment-13015451" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13015451-2021_1623356167161121.png"><img class="size-large wp-image-13015451" src="https://i.epochtimes.com/assets/uploads/2021/06/id13015451-2021_1623356167161121-600x450.png" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13015451" class="wp-caption-text">行进中的真相车队。（袁弘/大纪元）</figcaption></figure>
 <p>6月8日，真相车队行驶到惠灵顿市中心时正是午餐时间，街上行人川流不息，很多大楼里的工作人员坐在户外吃午餐，享受难得的冬日暖阳。真相车队的经过，引来无数的注目。</p>
+<figure id="attachment_13015457" aria-describedby="caption-attachment-13015457" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13015457-IMG_4076.jpg"><img class="size-large wp-image-13015457" src="https://i.epochtimes.com/assets/uploads/2021/06/id13015457-IMG_4076-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13015457" class="wp-caption-text">观看真相车队的民众。（袁弘/大纪元）</figcaption></figure>
+<figure id="attachment_13015458" aria-describedby="caption-attachment-13015458" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13015458-IMG_4103.jpg"><img class="size-large wp-image-13015458" src="https://i.epochtimes.com/assets/uploads/2021/06/id13015458-IMG_4103-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13015458" class="wp-caption-text">观看真相车队的民众。（袁弘/大纪元）</figcaption></figure>
 <p>除了真相车队，还有部分退党义工在各个市中心的交叉路口或繁忙街道拉起真相横幅，并向往来行人发放真相资料。</p>
 <p>在旺格努伊，一位叫Micheal的当地居民找到车队休息的地方，对车队人员说，有中国人在他居住的社区张贴毛泽东的画像，并散布毛的思想及共产主义理念，他对此非常担忧。他认为新西兰不应该允许这样的事情发生，他说“这是非常无法令人接受的”。今天他看到车队中的标语，感到很高兴，他觉得找到了志同道合的盟友。</p>
 <p>活动组织者约翰.于(John Yu)向本报记者介绍说，该活动是由“全球退党服务中心”发起并组织，参与者都是该服务中心的义工，主要来自奥克兰，沿途还不断有汉密尔顿、旺格努伊、北帕和惠灵顿的义工加入。</p>
@@ -28,41 +32,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/21/5/31/n12987393.md#1">新西兰支持澳洲就大麦高关税状告中共</a></li>
-<li><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/21/5/31/n12987469.md#1">新西兰情报机构介入 两名亲共议员辞职</a></li>
-<li><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/21/5/31/n12987766.md#1">澳总理出访新西兰：两国关系不会受挑拨影响</a></li>
-<li><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/21/6/7/n13003816.md#1">新西兰2021APEC会议：重申明确贸易规则</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/31/n12987393.md#1">新西兰支持澳洲就大麦高关税状告中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/31/n12987469.md#1">新西兰情报机构介入 两名亲共议员辞职</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/31/n12987766.md#1">澳总理出访新西兰：两国关系不会受挑拨影响</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/7/n13003816.md#1">新西兰2021APEC会议：重申明确贸易规则</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139150.md#1" target="_blank">袁斌：中共非法抢劫剥夺富人财产的真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385414.md#1" target="_blank">20年前 澳洲西人为法轮功赴京上访（下）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/6/n10619679.md#1" target="_blank">林辉：教授从练习低头弯腰到乐极生悲</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11384505.md#1" target="_blank">欧洲名校毕业的一代骄子 难忘童年之痛</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/3/n12997286.md#1">【小宇宙传说】古代瘟疫启示：一些人不染疫</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/5/28/n12982017.md#1">瘟神散疫失误错杀人 轮回堕凡间偿罪</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/1/n12992137.md#1">【忠义传】以身挡敌 曹操的首席保镖典韦</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/3/n12996820.md#1">【忽必烈传】建开平引轰动 蒙哥攻宋驾崩</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/1/n12990856.md#1">他们生前为乞丐 为何死后能升天</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/7/n13006065.md#1">【重播】布林肯国会作证：病毒溯源追责中共</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/4/n12999902.md#1">【未解之谜】文革横死 转世复仇</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/7/n13005922.md#1">【远见快评】美军机入台 “秘密战”打懵中共</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/4/n12997582.md#1">可网购冷冻食品 Costco今年发生的九个变化</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/5/n13001990.md#1">【新闻看点】广州全城检测 7市5600医护驰援</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/6/n13002083.md#1">广州疫情严重 封控区将用无人车无人机运货</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/5/n13001209.md#1">《Sweet Tooth：鹿角男孩》影评：儿童外貌改变 也带来全新冲突</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/6/n13003693.md#1">赵丽颖穿白色连衣裙现身 肩膀现拔火罐痕迹</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/5/n13000934.md#1">大S被爆闹离婚 疑与汪小菲发文争议有关</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/6/n13003512.md#1">被劝返美避疫情 YouTuber小贝：我是台湾人</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/5/n13000799.md#1">《Butter》破3亿观看 BTS已拥有16支3亿浏览MV</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/6/n13003685.md#1">国药、科兴疫苗 你不知道的2件事</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/5/n13001295.md#1">美农业部：吃太多鹰嘴豆泥可能对健康有害</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/6/n13002619.md#1">美国女子46年前遗失皮夹 终于找到了</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/7/n13004698.md#1">iPhone 12手机掉落德国运河 失主用奇招寻回</a></li>
-<li><a href="https://github.com/eifjab3983/djy/blob/master/gb/21/6/7/n13004465.md#1">“亡妻”在葬礼后回家 印度男子大吃一惊</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12017675.md#1">中共内外交困 前人大教授：王沪宁把习吹晕了</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12017276.md#1">塞尔维亚总统吻五星旗后 儿子确诊患肺炎</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12018161.md#1">川普问“哪来的” 上海党媒记者称“来自台湾”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/10/n12018467.md#1">【拍案惊奇】北京连发地震是人为？山东罕见雪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/10/n12020333.md#1">欧盟公布台湾口罩抵达画面 中华民国国旗登官网</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12017835.md#1">众艺人呛谭德塞抹黑台湾 炎亚纶：闭上你的嘴</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12018357.md#1">美国娱乐圈遭重创 一周内九位明星染疫过世</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/8/n12015123.md#1">妻预先考虑后事 汤姆·汉克斯被要求做两件事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12015926.md#1">胡瓜长年捐款做公益 不忘赞助辛龙女儿学费</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12016763.md#1">李明依罹甲状腺癌 动刀切除恶性肿瘤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/13/n11938424.md#1">强大善能量 猛兽蝗虫神奇证验</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/8/n12014127.md#1">工匠未见过佛 如何能雕刻出佛之庄严宝像</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/6/n12007048.md#1">未来的人们都将在善恶间抉择——1950年宋美龄《在纽约向全美广播演说》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/7/n12011418.md#1">【历史上的瘟疫】夺走两位君王性命的大瘟疫</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jcxdqq3957/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jcxdqq3957/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/8/n13007223.htm">终结中共真相车队首现新西兰首都 民众震撼</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/8/n13007223.htm">“终结中共”真相车队首现新西兰首都 民众震撼</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jcxdqq3957/djy/blob/master/gb/21/6/8/n13007223.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jcxdqq3957/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jcxdqq3957/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jcxdqq3957/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcxdqq3957/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/6/8/n13007223.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
